--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
     <script src="js/common/auth.js"></script>
 </head>
 <body>
-    <header>
+    <header class="animate-fade-in">
         <div class="header-container">
             <div class="header-content">
                 <img src="logo.png" alt="Chandra Travel and Tours Logo" class="header-logo">
@@ -19,6 +19,11 @@
                 <!-- Auth buttons will be dynamically inserted here by auth.js -->
             </div>
         </div>
+        <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Toggle mobile menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <nav id="main-nav"></nav>
     </header>
 
@@ -40,21 +45,20 @@
                     <div class="contact-card">
                         <div class="contact-icon">📧</div>
                         <h3>Email Us</h3>
-                        <p>info@chandratravelandtours.com</p>
                         <p>janely193.jc@gmail.com</p>
                     </div>
                     <div class="contact-card">
                         <div class="contact-icon">📞</div>
                         <h3>Call Us</h3>
-                        <p>+63 917 123 4567</p>
-                        <p>+63 951 119 1183</p>
+                        <p>0991 799 5112</p>
+                        <p>0951 119 1183</p>
                     </div>
                     <div class="contact-card">
                         <div class="contact-icon">📍</div>
                         <h3>Visit Us</h3>
                         <p></p>
-                        <p>Open Monday to Saturday</p>
-                        <p>9:00 AM - 6:00 PM</p>
+                        <p>Closes at 9:00 PM</p>
+                        <p>PHASE 2 BLOCK 1 LOT 4, EAST BELLEVUE RESIDENCES, Rodriguez (Montalban), 1860 Rizal</p>
                     </div>
                 </div>
             </div>
@@ -113,6 +117,31 @@
       }
       navHtml += '</ul>';
       document.getElementById('main-nav').innerHTML = navHtml;
+    });
+
+    // Mobile menu functionality
+    const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+    const mainNav = document.getElementById('main-nav');
+
+    mobileMenuBtn.addEventListener('click', () => {
+        mobileMenuBtn.classList.toggle('active');
+        mainNav.querySelector('ul').classList.toggle('active');
+    });
+
+    // Close mobile menu when clicking outside
+    document.addEventListener('click', (e) => {
+        if (!mainNav.contains(e.target) && !mobileMenuBtn.contains(e.target)) {
+            mobileMenuBtn.classList.remove('active');
+            mainNav.querySelector('ul').classList.remove('active');
+        }
+    });
+
+    // Close mobile menu when clicking a nav link
+    mainNav.addEventListener('click', (e) => {
+        if (e.target.tagName === 'A') {
+            mobileMenuBtn.classList.remove('active');
+            mainNav.querySelector('ul').classList.remove('active');
+        }
     });
     </script>
 </body>
